fin sec3.2.2 almost

--- a/main_file.tex
+++ b/main_file.tex
@@ -52,10 +52,10 @@
 \tableofcontents
 \listoffigures
 \listoftables
-\input{part1/chap1.tex}
+%\input{part1/chap1.tex}
 \input{part2/PPC.tex}
-\input{part3/PLNE.tex}
-\input{part4/expe.tex}
+%\input{part3/PLNE.tex}
+%\input{part4/expe.tex}
 
 \printindex
 
