--- a/newcommand.tex
+++ b/newcommand.tex
@@ -17,6 +17,9 @@
 \newcommand\D{{\cal D}}
 \newcommandx{\bmin}[1][1=i]{r_{#1}^{min}}
 \newcommandx{\bmax}[1][1=i]{r_{#1}^{max}}
+\newcommandx{\emin}[1][1=i]{e_{#1}^{min}}
+\newcommandx{\smax}[1][1=i]{s_{#1}^{max}}
+
 \newcommandx{\ES}[1][1=i]{est_{#1}}
 \newcommandx{\LS}[1][1=i]{lst_{#1}}
 \newcommandx{\EE}[1][1=i]{eet_{#1}}
