just in case fin interval checker

--- a/main_file.bib
+++ b/main_file.bib
@@ -490,6 +490,16 @@ doi="10.1007/s10107-004-0551-6",
 url="http://dx.doi.org/10.1007/s10107-004-0551-6"
 }
 
+@article{sweep,
+author = " J.L. Bentley and T.A. Ottmann" ,
+year= "1979"  ,
+title = "Algorithms
+for reporting and counting geometric intersections ",   
+journal= "IEEE
+Transactions on Computers", 
+volume = "28", 
+number = "9", 
+pages= "643--647"}
 
 @article{NK,
 title = "\{MIP\} models for resource-constrained project scheduling with flexible resource profiles ",
