--- a/newcommand.tex
+++ b/newcommand.tex
@@ -25,6 +25,16 @@
 \newcommandx{\EE}[1][1=i]{eet_{#1}}
 \newcommandx{\LE}[1][1=i]{let_{#1}}
 
+\newcommandx{\inter}[2][1=t_1,2=t_2]{{[}#1,#2{[}}
+\newcommandx{\htd}{G_{t_2}} 
+\newcommandx{\bdp}[1]{\Delta'(#1)}
+\newcommandx{\bup}[1]{\Gamma'(#1)} 
+\newcommandx{\bd}[1]{\Delta(#1)}
+\newcommandx{\bu}[1]{\Gamma(#1)} 
+\newcommandx{\htu}{G_{t_1}}
+\newcommandx{\itd}{D_{t_2}} 
+\newcommandx{\itu}{D'_{t_1}} 
+
 \newcommandx{\bb}[3][1=i,2=t_1,3=t_2]{\underline{b}(#1,#2,#3)}
 \newcommandx{\wb}[3][1=i,2=t_1,3=t_2]{\underline{w}(#1,#2,#3)}
 \newcommandx{\conv}[1][1=W_i]{CR\left(#1,t_1,t_2\right)}
