--- a/part2/CuSP/cumulative.tex
+++ b/part2/CuSP/cumulative.tex
@@ -539,7 +539,7 @@ Le paragraphe suivant est dédié aux règles de filtrage utilisant le
 concept d'{\it énergie}. 
  
 \subsubsection{Règles de filtrage énergétiques}
- 
+ \label{sec:nrj_CUSP}
 Parmi les règles de filtrage utilisant le concept d'énergie on
 retrouve le Edge-Finding\cite{VilimEF,theseNuijten}, le raisonnement
 énergétique~\cite{RELopez} ou encore les activités
